--- a/Homework1/part2/css/style.css
+++ b/Homework1/part2/css/style.css
@@ -422,7 +422,7 @@ legend {
 .footer-table {
     max-width: 990px;
     color: #FFFFFF;
-    margin: 105px auto 0px auto;
+    margin: 105px auto;
     
 }
 
@@ -468,49 +468,9 @@ text-align: left;
 .footer-aditional {
     display: flex;
     justify-content: space-around;
-    margin-top: 85px;
 }
 
-/* // X-Small devices (portrait phones, less than 576px) */
-@media screen and (max-width: 575.98px) {
-    ._container {
-        max-width: 250px;
-        margin: 0px auto;
-    }
-    .menu__list {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
-    }
-    .partner_hero_image_right {
-        position: absolute;
-        left: 57%;
-        right: 20%;
-        top: 65%;
-        bottom: 84.53%;
-        width: 25%;
-        /* height: 33%; */
-        mix-blend-mode: luminosity;
-    }
-    .description{
-        font-family: Circular Std;
-        font-size: 10px;
-        font-weight: 400;
-        line-height: 27px;
-        letter-spacing: 0.01em;
-        text-align: center;    
-    }
-    .content-item-header {
-        font-family: 'Circular Std';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 37px;
-        color: #181818;
-    }
 
-}
 
 /* // Small devices (landscape phones, less than 768px) */
 @media screen and (max-width: 767.98px) {
@@ -675,12 +635,74 @@ text-align: left;
 /* // Medium devices (tablets, less than 992px) */
 @media screen and (max-width: 991.98px) {
     ._container {
-        max-width: 760px;        
+        max-width: 450px;        
     }
     .header__container {
         
         max-width: 767px;
         
+    }
+    .header__menu{
+        max-width: 300px;
+        display: flex;
+        justify-content: right;
+    }
+    
+    .menu__item:not(:last-child) {
+        margin-right: 13px;
+    }
+    
+    .menu__item:nth-child(6) {
+        border: 1px #2F70FE solid;
+        padding: 5px 11px;
+        display: flex;
+        gap: 10px;
+    }
+
+    .menu__link {
+        font-family: 'Circular Std';
+        font-weight: 500;
+        font-size: 12px;
+        color: #000C2D;
+    }
+    
+    .menu__link__get__a__demo {
+        font-family: 'Circular Std';
+        font-weight: 500;
+        font-size: 12px;
+        color: #2F70FE;
+    }
+    .footer-table {
+        max-width: 542px;
+        color: #FFFFFF;
+        margin: 105px auto;
+        
+    }
+    
+    th {
+        font-family: 'Circular Std';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 18px;
+        /* identical to box height, or 112% */
+    
+        letter-spacing: 0.02em;
+    
+        color: #FFFFFF;
+        padding-bottom: 24px;
+        text-align: left;
+    
+    }
+    th:not(:last-child), .table-text:not(:last-child) {
+        padding-right: 40px;
+    }
+
+    .tethis__description{
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        align-items: center;
     }
     
 }
@@ -688,7 +710,7 @@ text-align: left;
 /* // Large devices (desktops, less than 1200px) */
 @media screen and (max-width: 1199.98px) {
     ._container {
-        max-width: 582px;       
+        max-width: 800px;       
     }
     .header__container {
         max-width: 990px;
@@ -697,7 +719,7 @@ text-align: left;
         position: absolute;
         left: 59%;
         right: 20%;
-        top: 60%;
+        top: 58%;
         bottom: 84.53%;
         width: 33%;
         height: 33%;
@@ -706,17 +728,110 @@ text-align: left;
     
     .partner_hero_image_left {
         position: absolute;
-    width: 37%;
-    height: 37%;
-    left: 69px;
-    top: 420px;
-    mix-blend-mode: luminosity;
-}
+        width: 37%;
+        height: 37%;
+        left: 69px;
+        top: 417px;
+        mix-blend-mode: luminosity;
+    }
     }
 
 
 /* // X-Large devices (large desktops, less than 1400px) */
 @media screen and (max-width: 1399.98px) {
     
+}
+
+/* // X-Small devices (portrait phones, less than 576px) */
+@media screen and (max-width: 575.98px) {
+    ._container {
+        max-width: 300px;
+    }
+    .header__menu {
+        max-width: 162px;
+        display: flex;
+    }
+    .menu__list {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+    }
+    .menu__item:not(:last-child) {
+        margin-bottom: 13px;
+    }
+    .main-block__container{
+        padding-top: 50px;
+        padding-bottom: 67px;
+    }    
+    .main-block__title {
+        font-size: 27px;
+        line-height: 39px;
+    }
+    .main-block__text {
+        font-size: 13px;
+        line-height: 20px;
+    }
+    .main-block__buttons{
+        margin: 17px auto 0px auto;
+    }
+    .partner_hero_image_right {
+        left: 69%;
+        right: 20%;
+        top: 51%;
+        bottom: 84.53%;
+        width: 25%;
+        mix-blend-mode: luminosity;
+    }
+    .partner_hero_image_left {
+        position: absolute;
+        width: 184.74px;
+        height: 254.87px;
+        left: -10px;
+        top: 319px;
+        mix-blend-mode: luminosity;
+    }
+    .tethis__title {
+        margin: 30px auto;
+    }
+    .tethis__description {
+        margin: 20px auto;
+    }
+    .description-item {
+        margin-bottom: 10px;
+    }
+    .description{
+        font-family: Circular Std;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0.01em;
+        text-align: center;    
+    }
+    .content-table {
+        margin: 20px auto;
+    }
+    .main-block td {
+        padding: 10px;
+    }
+    .content-item-header {
+        font-size: 20px;
+        line-height: 29px;
+    }
+    .footer-table {
+        max-width: 300px;
+        margin: 50px auto;
+    }
+    th:not(:last-child), .table-text:not(:last-child) {
+        padding-right: 0px;
+    }
+    .th-header {
+        font-size: 8px;
+    }
+    .table-text {
+        font-size: 7px;
+        line-height: 14px;
+        padding: 5px;
+    }
 }
 
