homework1 part2 edited

--- a/Homework1/part2/css/style.css
+++ b/Homework1/part2/css/style.css
@@ -172,7 +172,7 @@
     position: absolute;
     left: 67%;
     right: 9%;
-    top: 50%;
+    top: 330px;
     bottom: 84%;
 
     mix-blend-mode: luminosity;
