--- a/Homework6/style.css
+++ b/Homework6/style.css
@@ -1,6 +1,186 @@
-.main-loader {
-
+/* Reset and base styles  */
+* {
+	padding: 0px;
+	margin: 0px;
+	border: none;
 }
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+:focus,
+:active {
+	/*outline: none;*/
+}
+
+a:focus,
+a:active {
+	/* outline: none;*/
+}
+
+/* Links */
+
+a, a:link, a:visited  {
+    /* color: inherit; */
+    text-decoration: none;
+    /* display: inline-block; */
+}
+
+a:hover  {
+    /* color: inherit; */
+    text-decoration: none;
+}
+
+/* Common */
+
+aside, nav, footer, header, section, main {
+	display: block;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    font-size: inherit;
+	font-weight: inherit;
+}
+
+ul, ul li {
+	list-style: none;
+}
+
+img {
+	vertical-align: top;
+}
+
+img, svg {
+	max-width: 100%;
+	height: auto;
+}
+
+address {
+  font-style: normal;
+}
+
+/* Form */
+
+input, textarea, button, select {
+	font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: transparent;
+}
+
+input::-ms-clear {
+	display: none;
+}
+
+button, input[type="submit"] {
+    display: inline-block;
+    box-shadow: none;
+    background-color: transparent;
+    background: none;
+    cursor: pointer;
+}
+
+input:focus, input:active,
+button:focus, button:active {
+    outline: none;
+}
+
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+
+label {
+	cursor: pointer;
+}
+
+legend {
+	display: block;
+}
+
+/* ******************************************************************************* */
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
+/* font-family: 'Rubik Vinyl', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100;200;300&display=swap');
+/* font-family: 'Martian Mono', monospace; */
+
+*{
+    font-family: 'Martian Mono', monospace;
+}
+
+h1 {
+    font-family: 'Rubik Vinyl', cursive;
+    font-size: 72px;
+    font-weight: 400;
+    text-align: center;
+    margin: 40px auto;
+}
+
+.user-name {
+    font-weight: 300;
+    font-size: 32px;
+    text-align: center;
+    margin: 20px auto;
+}
+
+.user-wrapper {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+}
+
+.info-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.user-created {
+    font-size: 24px;
+    border: 1px solid black;
+    width: 70%;
+    padding: 20px;
+    margin: 10px;
+}
+
+.repo-items {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto; 
+    width: 70%;
+}
+
+.repos {
+    background-color: black;
+    color: white;
+    width: 70%;
+    padding: 20px;
+    margin: 10px;
+}
+
+.user-img {
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+    width: 30%;
+    height: 30%; 
+}
+
+.repo-item {
+    margin: 10px;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.repo-item:hover {
+    text-decoration: underline;
+}
+
 .loader {
     margin: auto auto;
     border: 8px solid #f3f3f3;
