--- a/Homework11/src/components/layout/layout.css
+++ b/Homework11/src/components/layout/layout.css
@@ -3,7 +3,7 @@
     flex-direction: row;
 
 }
-.layout-body {
+.Layout-body {
     background-color: aquamarine;
     width: 75%;
     /* height:100vh; */
